--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GetBride</title>
+    <title>Pokemons</title>
     <link rel="stylesheet" href="style.css" />
     <script src="/script.js"></script>
     <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
@@ -14,29 +14,9 @@
     <h1>Hello world!</h1>
     <div id="parentcontainer">
       <div id="filterbar">
-        <!-- <div>
-          <label for="year"> Year</label>
-          <select name="year" id="ddlYear">
-            <option value="2002">2002</option>
-            <option value="2001">2001</option>
-            <option value="2000">2000</option>
-            <option value="1999">1999</option>
-            <option value="1998">1998</option>
-            <option value="1997">1997</option>
-            <option value="1996">1996</option>
-            <option value="1995">1995</option>
-            <option value="1994">1994</option>
-          </select>
-        </div>
-        <div>
-          <label for="hasImg"> With Image</label>
-          <select name="hasImg" id="ddlImg">
-            <option value="yes">YES</option>
-            <option value="no">NO</option>
-          </select>
-        </div> -->
+       
         <div class="search">
-          <input type="search" name="pokemonName" placeholder="Enter Pokemon Name" id="searchbox">
+          <input type="search" name="pokemonName" placeholder="Enter Pokemon Name" id="searchbox" onchange="filterPokemons(this.value)">
           
         </div>
       </div>
